# generic_fan_coil_thermostat

./: README.md  climate.py  hacs.json  manifest.json  pyproject.toml
.github/: copilot-instructions.md
custom_components/generic-fan-coil-thermostat/: climate.py
custom_components/generic_fan_coil_thermostat/: __init__.py  climate.py  config_flow.py  manifest.json
custom_components/generic_fan_coil_thermostat/translations/: en.json
tests/generic_fan_coil_thermostat/: __init__.py  test_climate.py  test_config_flow.py  test_init.py
