[project]
name = "custom_components.generic_fan_coil_thermostat"
version = "0.2.1"
description = "This custom component creates a climate entity that behaves like a thermostat for controlling both heating and cooling with fan speed control. It automatically adjusts the fan speed based on the temperature difference between the current room temperature and the target temperature."
maintainers = [
  {name = "Marius Bieliauskas", email = "mbieliau@gmail.com"}
]
keywords = [
  "homeassistant",
  "lights",
  "custom-component",
  "custom-integration"
]
classifiers = [
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.12.0"
dependencies = [
  "homeassistant>=2024.12.0",
  "pytest>=8.3.4",
  "pyyaml>=6.0.2",
  "ruff>=0.9.7",
]

[project.optional-dependencies]
dev = [
  "homeassistant-stubs",
  "pytest",
  "ruff",
  "types-PyYAML",
  "voluptuous-stubs",
  "pyyaml"
]

[project.urls]
"Source Code" = "https://github.com/recallfx/ha-generic-fan-coil-thermostat"
"Bug Reports" = "https://github.com/recallfx/ha-generic-fan-coil-thermostat/issues"

[tool.setuptools]
py-modules = ["custom_components.generic_fan_coil_thermostat"]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]